压缩背景图片, 添加标题

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Ice-Hazymoon 的后花园</title>
+    <meta name="description" content="聆听最初的声音，向往无尽的未来"/>
+    <meta name="keywords" content="初音未来,冰凌胧月,Hazymoon,Ice-Hazymoon"/>
     <link rel="shortcut icon" href="./images/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 </head>
